--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Discover the Basque Country - Where ancient culture meets stunning landscapes and world-class cuisine"
+      content="Discover the Basque Country -- Where ancient culture meets stunning landscapes and world-class cuisine"
     />
     <title>Basque Explorer - Discover the Basque Country</title>
     <link
