updated video id

--- a/index.html
+++ b/index.html
@@ -61,12 +61,7 @@
           Where ancient culture meets stunning landscapes and world-class
           cuisine
         </p>
-        <a
-          href="https://youtu.be/JYwUUDdYi9I?si=3WOCmLdHjhMaNrGJ"
-          class="btn-primary-custom"
-          target="_blank"
-          >EXPLORE NOW</a
-        >
+        <a href="#video" class="btn-primary-custom">EXPLORE NOW</a>
       </div>
     </section>
 
@@ -176,7 +171,7 @@
     </section>
 
     <!-- Video Section -->
-    <section class="video-section">
+    <section class="video-section" id="video">
       <div class="container">
         <h2 class="section-title blue text-white">EXPERIENCE SAN SEBASTIAN</h2>
         <div class="video-container">
