font colors and sizes

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
               <div class="row g-0">
                 <div class="col-md-4">
                   <div class="culture-image">
+                    <img src="/images/culture.png" alt="Culture" />
                     <i class="fas fa-language"></i>
                   </div>
                 </div>
