fixed some positioning

--- a/index.html
+++ b/index.html
@@ -148,15 +148,22 @@
                   </div>
                 </div>
                 <div class="col-md-8">
-                  <div class="card-body p-5">
-                    <h3 class="card-title">Ancient Language & Traditions</h3>
-                    <p class="card-text">
+                  <div
+                    class="card-body l-100"
+                    style="margin-top: 30px"
+                    id="culture-text"
+                  >
+                    <h3 class="card-title align-items-center">
+                      Ancient Language & Traditions
+                    </h3>
+                    <p class="card-text align-items-center">
                       Discover Europe's oldest living language and culture. The
                       Basque people have maintained their unique identity
                       through centuries, with distinctive traditions including
                       rural sports, music, and dance that continue to thrive
                       today.
                     </p>
+                    <br />
                     <a
                       href="https://www.nationalgeographic.com/history/article/how-basques-became-autonomous-community-spain"
                       class="btn-secondary-custom"
