added bootstrap grid

--- a/index.html
+++ b/index.html
@@ -181,6 +181,60 @@
       </div>
     </section>
 
+    <div class="image-grid-section">
+      <div class="grid-container">
+        <h2 class="section-title">CULTURAL HIGHLIGHTS</h2>
+
+        <div class="row g-4">
+          <!-- Image Card 4 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="image-card">
+              <div class="image-container">
+                <img
+                  src="/images/santemlo.png"
+                  alt="Rich History"
+                  class="grid-image"
+                />
+              </div>
+              <p class="image-caption">
+                Traditional Basque folk dancing and festivals
+              </p>
+            </div>
+          </div>
+
+          <!-- Image Card 5 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="image-card variant-green">
+              <div class="image-container">
+                <img
+                  src="basquesports.png"
+                  alt="Sea Voyagers"
+                  class="grid-image"
+                />
+              </div>
+              <p class="image-caption">Ancient sea and maritime traditions</p>
+            </div>
+          </div>
+
+          <!-- Image Card 6 -->
+          <div class="col-lg-4 col-md-6 col-12">
+            <div class="image-card variant-blue">
+              <div class="image-container">
+                <img
+                  src="/images/architecture.png"
+                  alt="Architecture"
+                  class="grid-image"
+                />
+              </div>
+              <p class="image-caption">
+                Medieval architecture and historic buildings
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Video Section -->
     <section class="video-section" id="video">
       <div class="container">
