updated img folder

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="image-card variant-green">
               <div class="image-container">
                 <img
-                  src="basquesports.png"
+                  src="/images/basquesports.png"
                   alt="Sea Voyagers"
                   class="grid-image"
                 />
