added html table and fixed some css

--- a/index.html
+++ b/index.html
@@ -320,6 +320,52 @@
       </div>
     </section>
 
+    <!-- Summary Section -->
+     <div class="basque-tourism-table">
+      <table>
+        <thead>
+          <tr>
+            <td>City</td>
+          <td>Best For</td>
+          <td>Must-See Attractions<</td>
+          <td>Vibe</td>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Bilbao</td>
+            <td>Art & Architecture</td>
+            <td>Guggenheim Museum, Old Town</td>
+            <td>Urban & Artistic</td>
+          </tr>
+          <tr>
+            <td>San Sebastian</td>
+            <td>Beaches & Food</td>
+            <td>La Concha Beach, Pintxos Bars</td>
+            <td>Elegant & Lively</td>
+          </tr>
+          <tr>
+            <td>Vitoria-Gasteiz</td>
+            <td>History & Nature</td>
+            <td>Green Belt, Cathedral of Santa Maria</td>
+            <td>Calm & Cultural</td>
+          </tr>
+          <tr>
+            <td>Hondarribia</td>
+            <td>Small-town Charm</td>
+            <td>Marina District & Castle</td>
+            <td>Picturesque & Cozy</td>
+          </tr>
+          <td>
+            <td>Getaria</td>
+            <td>Wine & Coastal Scenery</td>
+            <td>Txakoli Wineries, Fishing Port</td>
+            <td>Relaxed & Scenic</td>
+          </td>
+        </tbody>  
+      </table>
+     </div>
+
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
