fixed table and culture picture

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                   src="/images/architecture.png"
                   alt="Architecture"
                   class="grid-image"
+                  style="position: fixed; top: 0; left: 0"
                 />
               </div>
               <p class="image-caption">
@@ -321,14 +322,14 @@
     </section>
 
     <!-- Summary Section -->
-     <div class="basque-tourism-table">
+    <div class="basque-tourism-table">
       <table>
         <thead>
           <tr>
             <td>City</td>
-          <td>Best For</td>
-          <td>Must-See Attractions<</td>
-          <td>Vibe</td>
+            <td>Best For</td>
+            <td>Must-See Attractions<</td>
+            <td>Vibe</td>
           </tr>
         </thead>
         <tbody>
@@ -356,15 +357,15 @@
             <td>Marina District & Castle</td>
             <td>Picturesque & Cozy</td>
           </tr>
-          <td>
+          <tr>
             <td>Getaria</td>
             <td>Wine & Coastal Scenery</td>
             <td>Txakoli Wineries, Fishing Port</td>
             <td>Relaxed & Scenic</td>
-          </td>
-        </tbody>  
+          </tr>
+        </tbody>
       </table>
-     </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
