copilot messed up original css tried to fix

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
-      <div class="hero-background"></div>
+      <div class="hero-background">
+        <img src="/images/herobasque.png" />
+      </div>
       <div class="hero-content">
         <h1>DISCOVER THE BASQUE COUNTRY</h1>
         <p>
@@ -323,6 +325,7 @@
 
     <!-- Summary Section -->
     <div class="basque-tourism-table">
+      <h2>Basque Country Cities Summary</h2>
       <table>
         <thead>
           <tr>
