--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-section">
-      <div class="hero-background">
-        <img src="/images/herobasque.png" />
-      </div>
+      <div class="hero-background"></div>
       <div class="hero-content">
         <h1>DISCOVER THE BASQUE COUNTRY</h1>
         <p>
@@ -220,13 +218,12 @@
 
           <!-- Image Card 6 -->
           <div class="col-lg-4 col-md-6 col-12">
-            <div class="image-card variant-blue">
+            <div class="image-card variant-green">
               <div class="image-container">
                 <img
                   src="/images/architecture.png"
                   alt="Architecture"
                   class="grid-image"
-                  style="position: fixed; top: 0; left: 0"
                 />
               </div>
               <p class="image-caption">
