--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
           <tr>
             <td>City</td>
             <td>Best For</td>
-            <td>Must-See Attractions<</td>
+            <td>Must-See Attractions</td>
             <td>Vibe</td>
           </tr>
         </thead>
